<resources>
    <string name="app_name">Regimento Open</string>
    <string name="action_ranking">Ranking</string>
    <string name="action_tournament">Tournament</string>

    <string name="add">Add</string>
    <string name="del">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>

    <string name="section_format">Hello World from section: %1$d</string>

    <string name="title_activity_add_player">Add Player</string>
    <string name="title_activity_edit_player">Edit Player</string>
    <string name="title_activity_match">Match Result - Single</string>
    <string name="title_activity_doubles">Doubles</string>
    <string name="title_activity_main">Single</string>
    <string name="title_activity_ranking">Ranking - Single</string>
    <string name="title_activity_add_double">Add Double</string>
    <string name="title_activity_edit_double">Edit Double</string>
    <string name="title_activity_ranking_doubles">Ranking - Doubles</string>
    <string name="title_activity_match_doubles">Match Result - Doubles</string>
    <string name="title_activity_about">About</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="single">Single</string>
    <string name="doubles">Doubles</string>
    <string name="ranking">Ranking</string>
    <string name="match_result">+ Match Result</string>
    <string name="players">Players</string>
    <string name="double_players">Doubles Players</string>

    <string name="hint_nameP1">*Name - Player 1</string>
    <string name="hint_nameP2">*Name - Player 2</string>
    <string name="hint_win">*Win</string>
    <string name="hint_lose">*Lose</string>
    <string name="matches">Matches</string>
    <string name="games">Games</string>
    <string name="sets">Sets</string>
    <string name="hint_name">*Name</string>
    <string name="double_d1">*Double 1</string>
    <string name="double_d2">*Double 2</string>
    <string name="player_p1">*Player 1</string>
    <string name="player_p2">*Player 2</string>

    <string name="blank_field">Field can not be blank!</string>
    <string name="negative_win">Win can not be negative!</string>
    <string name="negative_lose">Lose can not be negative!</string>
    <string name="updated">Successfully updated!</string>
    <string name="deleted">Successfully deleted!</string>
    <string name="added">Successfully added!</string>

    <string name="email_dev">igormeira.dev@gmail.com</string>
    <string name="about_txt">Regimento Open is an App to save your match results between you and your friends. With it you can check who is winning, who is the number 1. And you can save results to singles and doubles. Play, save and never forget who is the number 1. \n </string>
    <string name="developed">Developed by \n</string>
    <string name="dev_name">Igor de Araújo Meira</string>
    <string name="rate">Rate</string>

</resources>
