<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.igorm.regimentoopen.Main.AboutActivity"
    tools:showIn="@layout/activity_about">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_tennis_ball"
                android:id="@+id/imageView2" />

            <TextView
                android:text="@string/about_txt"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"/>

            <TextView
                android:text="@string/developed"
                android:textSize="25sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/dev_name"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:autoLink="email"
                android:text="@string/email_dev"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
