<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Player.AddPlayerActivity"
    tools:showIn="@layout/activity_add_player"
    android:background="#FFFFFF">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/hint_name"
        android:ems="10"
        android:id="@+id/editText_add_name"
        android:layout_gravity="center_horizontal" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/matches"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:weightSum="1">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:hint="@string/hint_win"
                    android:ems="10"
                    android:textAlignment="center"
                    android:id="@+id/editText_add_win"
                    android:layout_weight="0.5"
                    android:layout_gravity="center_horizontal"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:hint="@string/hint_lose"
                    android:ems="10"
                    android:textAlignment="center"
                    android:id="@+id/editText_add_lose"
                    android:layout_weight="0.5"
                    android:layout_gravity="center_horizontal" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/games"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:weightSum="1">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:hint="@string/hint_win"
                    android:ems="10"
                    android:textAlignment="center"
                    android:id="@+id/editText_add_games_win"
                    android:layout_weight="0.5"
                    android:layout_gravity="center_horizontal" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:hint="@string/hint_lose"
                    android:textAlignment="center"
                    android:ems="10"
                    android:id="@+id/editText_add_games_lose"
                    android:layout_weight="0.5"
                    android:layout_gravity="center_horizontal" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/sets"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:weightSum="1">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:hint="@string/hint_win"
                    android:ems="10"
                    android:textAlignment="center"
                    android:id="@+id/editText_add_sets_win"
                    android:layout_weight="0.5"
                    android:layout_gravity="center_horizontal" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:hint="@string/hint_lose"
                    android:ems="10"
                    android:textAlignment="center"
                    android:id="@+id/editText_add_sets_lose"
                    android:layout_weight="0.5"
                    android:layout_gravity="center_horizontal" />

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>


</LinearLayout>
