<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.igorm.regimentoopen.Doubles.EditDoubleActivity"
    tools:showIn="@layout/activity_edit_double"
    android:background="#FFFFFF">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/hint_nameP1"
                android:ems="10"
                android:id="@+id/editText_edit_name_doubleP1"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/hint_nameP2"
                android:ems="10"
                android:id="@+id/editText_edit_name_doubleP2"
                android:layout_gravity="center_horizontal" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/matches"
                        android:textStyle="bold"
                        android:layout_gravity="center_horizontal" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:weightSum="1">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
                            android:hint="@string/hint_win"
                            android:ems="10"
                            android:textAlignment="center"
                            android:id="@+id/editText_edit_win_doubles"
                            android:layout_weight="0.5"
                            android:layout_gravity="center_horizontal"/>

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
                            android:hint="@string/hint_lose"
                            android:ems="10"
                            android:textAlignment="center"
                            android:id="@+id/editText_edit_lose_doubles"
                            android:layout_weight="0.5"
                            android:layout_gravity="center_horizontal" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/games"
                        android:textStyle="bold"
                        android:layout_gravity="center_horizontal" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:weightSum="1">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
                            android:hint="@string/hint_win"
                            android:ems="10"
                            android:textAlignment="center"
                            android:id="@+id/editText_edit_games_win_doubles"
                            android:layout_weight="0.5"
                            android:layout_gravity="center_horizontal" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
                            android:hint="@string/hint_lose"
                            android:textAlignment="center"
                            android:ems="10"
                            android:id="@+id/editText_edit_games_lose_doubles"
                            android:layout_weight="0.5"
                            android:layout_gravity="center_horizontal" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/sets"
                        android:textStyle="bold"
                        android:layout_gravity="center_horizontal" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:weightSum="1">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
                            android:hint="@string/hint_win"
                            android:ems="10"
                            android:textAlignment="center"
                            android:id="@+id/editText_edit_sets_win_doubles"
                            android:layout_weight="0.5"
                            android:layout_gravity="center_horizontal" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
                            android:hint="@string/hint_lose"
                            android:ems="10"
                            android:textAlignment="center"
                            android:id="@+id/editText_edit_sets_lose_doubles"
                            android:layout_weight="0.5"
                            android:layout_gravity="center_horizontal" />

                    </LinearLayout>

                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
